<resources>
    <string name="app_name">MySlideShow</string>
    <string name="edit_video">Edit video</string>
    <string name="effect">Transition</string>
    <string name="music_title">Music</string>
    <string name="duration">Duration</string>
    <string name="frame">Frame</string>
    <string name="photo">Photo</string>
    <string name="Admob_Giftbox_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Admob_Splash_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_off">Advertisement has been turned off</string>
    <string name="add_more">ADD MODE</string>
    <string name="add_music">Add music</string>
    <string name="add_to_your_favourite">Add to Your Favourite</string>
    <string name="adjust_time">Adjust time</string>
    <string name="admob_app_id">ca-app-pub-8998561540057077~9228585852</string>
    <string name="ads_loading">Ads Loading…</string>
    <string name="all_your_photo">All your photo</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="app_image">app image</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appy_all_clip">Apply all clip</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
    <string name="are_you_sure_to_delete">ARE YOU SURE TO DELETE?</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove this sound? All settings for this sound will be deleted.</string>
    <string name="bannerGif">bannerGif</string>
    <string name="bannerSelectImage">bannerSelectImage</string>
    <string name="bannerSlideShow">bannerSlideShow</string>
    <string name="banner_adapter_null_error">Banner setAdapter() 参数不能为空</string>
    <string name="banner_adapter_use_error">你还没有调用 setAdapter() 方法</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">Brightness: %1$d</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="buy_now">BUY NOW</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_loop">Cannot loop audio longer than video!!!</string>
    <string name="cannot_open_image">Cannot open image</string>
    <string name="cannot_play">This video cannot be played</string>
    <string name="change">Change</string>
    <string name="change_image">Change image</string>
    <string name="change_other_sounds">Change other sounds</string>
    <string name="change_to_this_term">Changes to This Terms &amp; Conditions: I may update our</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_for_new_version">Check for New Version</string>
    <string name="check_now">Check Now</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_one_of_these_to_export">Choose one of these to export</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="congratulation">congratulation!</string>
    <string name="contact_me_at">hesitate to contact me at</string>
    <string name="contact_us">Contact Us: If you have any questions or suggestions, do not</string>
    <string name="content_policy">Gomin built the Slideshow app as a Freemium app (offers you both free and paid services) and Ad-Support app (Advertising-supported or third party (additional) software included). This SERVICE is provided by Gomin at no cost and is intended for use as is.</string>
    <string name="content_policy_1">\9 1.1 Interpretation \10 \9 1.2 Definitions</string>
    <string name="content_policy_2">\9 2.1 Types of Data Collected \10 \9 2.1.1 Personal Data \10 \9 2.1.2 Usage Data \10 \9 2.1.3 Payment Data \10 \9 2.1.4 Information Collected while Using the Application \10 \9 2.2 Use of Your Personal Data: \10 \9 2.3 Retention of Your Personal Data \10 \9 2.4 Disclosure of Your Personal Data \10 \9 2.4.1 Business Transactions \10 \9 2.4.2 Law enforcement \10 \9 2.4.3 Other legal requirements \10 \9 2.5 Cookies. \10 \9 2.6 Security of Your Personal Data \10 \9 2.7 Legal grounds</string>
    <string name="content_term">Important: By downloading or using the app, this Terms &amp; Conditions (“The Term”) will automatically apply to you (“User”) \10 \9 1. Scope of this Term: \10 \9 2. The source code of the app. \10 \9 3. Non-commercial Use of Slideshow \10 \9 4. Stores and processes personal data \10 \9 5. Wifi accessing and Cost of data \10 \9 6. Virtual Goods and Subscription Service \10 \9 7. Your Use of Slideshow \10 \9 8. Advertising \10 \9 9. Links To Other Websites \10 \9 10. Disclaimer: I hereby declare that I do not own the rights to any music/songs in the app. All rights belong to the owner. No copyright infringement intended.</string>
    <string name="create_new">create new</string>
    <string name="create_video">Create video</string>
    <string name="current_version">Current version</string>
    <string name="data_are_being_synced_to_your_device">Data are being synced to your device…</string>
    <string name="date">Date</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="default_web_client_id">235838968933-t0n53osncusgs4cvagohg5uh6bcohaa2.apps.googleusercontent.com</string>
    <string name="define_roundedimageview" />
    <string name="delete_now">DELETE NOW</string>
    <string name="delete_video">Delete video</string>
    <string name="detail">Detail</string>
    <string name="do_you_want_cancel">Do you want to cancel the video processing?</string>
    <string name="dont_have_draft">You don\'t have any draft videos yet</string>
    <string name="download_this_sound">Download this sound</string>
    <string name="downloading">Downloading ...</string>
    <string name="downloading_your_content">DOWNLOADING YOUR CONTENT</string>
    <string name="drag_to_crop">Drag to crop music</string>
    <string name="drag_to_left_or_right">Drag to Left or Right</string>
    <string name="error">ERROR!!</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_render">Error rendering video Please try again</string>
    <string name="estimated_time">Estimated time</string>
    <string name="exit_without_saving">EXIT WITHOUT SAVING</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="folder">Folder</string>
    <string name="progress">Progress</string>
    <string name="render">Render</string>
    <string name="video_quality">Video quality</string>
</resources>