<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_43sdp"
            android:layout_height="@dimen/_43sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="cancelRender"
            android:padding="@dimen/_14sdp"
            app:srcCompat="@drawable/img_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@id/btn_back"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="rendering"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_head">


        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/render"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/video_quality"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt1" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/folder"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt2" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/estimated_time"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt3" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/progress"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt4" />

        <TextView
            android:id="@+id/txtA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/render"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="110"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtA" />

        <TextView
            android:id="@+id/txt_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="DCIM/SlideShow"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt_quality" />

        <TextView
            android:id="@+id/txt_estime_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="......"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt_folder" />

        <TextView
            android:id="@+id/txt_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="00%"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txt_estime_time" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>